--- a/style.css
+++ b/style.css
@@ -22,6 +22,18 @@ img {
   border-radius: 16px;
 }
 
+main {
+  padding: 24px;
+}
+
+section + section {
+  margin-top: 24px;
+}
+
+#about p + p {
+  margin-top: 12px;
+}
+
 h1 {
   line-height: 140%;
   font-size: 40px;
@@ -33,4 +45,10 @@ h2 {
 
 h1, h2 {
   color: #291b1a;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul {
+  padding-left: 24px;
 }
